crates/mineral-tui/src/components/layout/sidebar/snapshots/library_album_tracks_snapshot.snap
---
source: crates/mineral-tui/src/components/sidebar/library.rs
description: "曲目列表:带 album 数据的 Full 档(title/artist/album 三列对齐)"
expression: t.backend()
---
"╭ tracks / EndSerenading ──────────────────────────────────────────────────────╮"
"│    #    title                      artist            album             len   │"
"│▌   ♫    Bones                      HONNE             no song           3:30  │"
"│    1    Location Unknown           HONNE             Warm on a Cold Ni 3:30  │"
"│    2    无                         草东没有派对      丑奴儿            3:30  │" Hidden by multi-width symbols: [(11, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (56, " "), (58, " "), (60, " ")]
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰ 1 / 3 ──────────────────────────────────────────────────────────────10m total╯"
