crates/mineral-tui/src/components/layout/sidebar/snapshots/playlists_search_no_match_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/sidebar/playlists.rs
description: "歌单列表:搜索零命中(居中「无匹配」)"
expression: t.backend()
---
"╭ playlists /zzz───────────────────────╮"
"│                                      │"
"│                无匹配                │" Hidden by multi-width symbols: [(18, " "), (20, " "), (22, " ")]
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰ 0 / 0 ───────────────────────────────╯"
