crates/mineral-tui/src/components/layout/sidebar/snapshots/playlists_search_pinyin_initials_snapshot.snap
---
source: crates/mineral-tui/src/components/layout/sidebar/playlists.rs
description: "歌单列表:首字母 cry 命中「春日影」(汉字三字均高亮)"
expression: t.backend()
---
"╭ playlists /cry───────────────────────╮"
"│  name      source      length   items│"
"│▌ 春日影    ♫ netease   —        1    │" Hidden by multi-width symbols: [(4, " "), (6, " "), (8, " ")]
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"╰ 1 / 1 ───────────────────────────────╯"
